:truck: rename files, refactor code and comment functions in code

--- a/meli-frontend/src/styles/components/_search.scss
+++ b/meli-frontend/src/styles/components/_search.scss
@@ -35,6 +35,11 @@
   }
 }
 
+.product-empty {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
 .product-detail {
   & .product-detail__content {
     padding: 2rem;
